# SQLWrapper

./: .gitignore  Makefile  Pipfile  README.md  SQLWrapper.py  __init__.py  prompter.py  pyproject.toml  setup.py
config/: .env_example  db_config_example.ini  os2_config.ini
docs/: dbconfig.md  installation.md  parameters.md  setup_db_config.md  setup_vault.md
sqlwrapper/: SQLWrapper.py  __init__.py  base.py  config.py  connect.py  dbmenu.py  df_tools.py  errors.py  etl.py  mariadb.py  oracle.py  parameters.py  prompter.py  sqlserver.py  xlsx.py
sqlwrapper/config_sample/: .env.example  db_config.ini.example
