[tool.poetry]
name = "sqlwrapper"
version = "0.2.8"
description = "sqlwrapper database tools"
authors = ["Duke LeTran <daletran@ucdavis.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "ripy"
url = "https://repos.ri.ucdavis.edu/python"
secondary = true

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
numpy = "*"
sqlalchemy = "*"
cx-oracle = "*"
pyodbc = "*"
#piesafe = "1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
