[tool.poetry]
name = "sqlwrapper"
version = "0.2.97"
description = "sqlwrapper database tools"
authors = ["Duke LeTran <daletran@ucdavis.edu>"]
readme = "README.md"

[[tool.poetry.source]]
name = "ripy"
url = "https://repos.ri.ucdavis.edu/python"
secondary = true

[tool.poetry.dependencies]
python = "^3.6"
pandas = "*"
numpy = "*"
sqlalchemy = "*"
cx-oracle = "*"
pyodbc = "*"
pymysql = "*"
python-dotenv = "*"
hvac = "*"
openpyxl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
